--- a/app/src/main/res/layout/action_bar_setup_2.xml
+++ b/app/src/main/res/layout/action_bar_setup_2.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/colorPrimary">
     <ImageButton
         android:id="@+id/imgBtnBackSetup2"
         android:layout_width="match_parent"
@@ -12,13 +13,14 @@
         android:layout_weight="45"
         android:clickable="true"
         android:focusable="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:tint="@color/colorWhite"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
         android:text="@string/tell_us_about_yourselves"
         android:gravity="center"
@@ -32,5 +34,6 @@
         android:layout_weight="45"
         android:clickable="true"
         android:focusable="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:tint="@color/colorWhite"/>
 </LinearLayout>
