--- a/app/src/main/res/layout/action_bar_teachers_view_of_course.xml
+++ b/app/src/main/res/layout/action_bar_teachers_view_of_course.xml
@@ -4,7 +4,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@color/colorPrimary">
     <ImageButton
         android:id="@+id/imgBtnBackTeachersViewCourse"
         android:layout_width="match_parent"
@@ -14,14 +15,15 @@
         android:layout_weight="45"
         android:clickable="true"
         android:focusable="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:tint="@color/colorWhite"/>
     <TextView
         android:id="@+id/courseNameTeachersView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_weight="10"
@@ -35,5 +37,6 @@
         android:layout_weight="45"
         android:clickable="true"
         android:focusable="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:tint="@color/colorWhite"/>
 </LinearLayout>
