--- a/app/src/main/res/layout/action_bar_edit_profile.xml
+++ b/app/src/main/res/layout/action_bar_edit_profile.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/colorPrimary">
     <ImageButton
         android:id="@+id/imgBtnBackEditProfile"
         android:layout_width="match_parent"
@@ -13,13 +14,14 @@
         android:layout_weight="45"
         android:clickable="true"
         android:focusable="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:tint="@color/colorWhite"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
         android:text="@string/edit_your_profile"
         android:gravity="center"
@@ -33,5 +35,6 @@
         android:layout_weight="45"
         android:clickable="true"
         android:focusable="true"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:tint="@color/colorWhite"/>
 </LinearLayout>
