--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -26,7 +26,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/introductory_image"/>
+                android:id="@+id/introductory_image"
+                tools:ignore="ContentDescription" />
             <!--<VideoView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
