--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -210,7 +210,7 @@
                 android:gravity="center_vertical"
                 android:layout_weight="60"/>
             <EditText
-                android:inputType="datetime"
+                android:inputType="textUri"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
