--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -71,26 +71,30 @@
                 android:text="@string/course_details"
                 android:typeface="sans"
                 android:gravity="center_vertical" />
+
             <TextView
+                android:id="@+id/teacher_view_course_rating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:padding="10dp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="italic"
-                android:textSize="20sp"
                 android:text="Rating - */5"
-                android:typeface="normal"
-                android:gravity="center_vertical" />
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:typeface="normal" />
+
             <TextView
+                android:id="@+id/teacher_view_course_enrolled"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:padding="10dp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="italic"
-                android:textSize="20sp"
                 android:text="0 currently enrolled"
-                android:typeface="normal"
-                android:gravity="center_vertical" />
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:typeface="normal" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
