--- a/app/src/main/res/menu/three_dot_menu.xml
+++ b/app/src/main/res/menu/three_dot_menu.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <item
-        android:title="Title 1"
-        android:id="@+id/title1"
+        android:title="Refresh"
+        android:id="@+id/refresh"
         android:icon="@drawable/add_box_icon"/>
     <item
         android:title="SignOut"
