--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -283,6 +283,20 @@
 
             </RadioGroup>
 
+            <!-- to be made visible only if charge a fee is checked -->
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_fees"
+                android:inputType="number"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimaryDark"
+                android:background="@drawable/text_view_add_course"
+                android:padding="10dp"
+                android:layout_margin="@dimen/text_margin"
+                android:id="@+id/course_fee"
+                android:visibility="gone"/>
+
 
         </LinearLayout>
     </ScrollView>
