--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical">
-
             <TextView
                 android:id="@+id/textYourCurrentCourses"
                 android:layout_width="match_parent"
@@ -28,9 +27,8 @@
                 android:gravity="start"
                 android:text="@string/resume_learning"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_margin"
                 android:typeface="sans" />
-
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/currentCourseListView"
                     android:scrollbars="horizontal"
@@ -40,9 +38,7 @@
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     android:layout_below="@id/textYourCurrentCourses"
-                    android:layout_margin="5dp"
-                    android:background="@color/colorBlue"/>
-
+                    android:layout_margin="5dp"/>
                 <TextView
                     android:id="@+id/textRecommendedCoursesList"
                     android:layout_width="match_parent"
@@ -51,7 +47,7 @@
                     android:layout_marginStart="15dp"
                     android:text="@string/recommended_for_you"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_margin"
                     android:typeface="sans"
                     android:layout_below="@id/currentCourseListView"
                     android:layout_marginTop="48dp"/>
@@ -64,9 +60,7 @@
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
-                    android:layout_below="@id/textRecommendedCoursesList"
-                    android:background="@color/colorBlue"/>
-
+                    android:layout_below="@id/textRecommendedCoursesList"/>
                 <TextView
                     android:id="@+id/textExploreCoursesList"
                     android:layout_width="match_parent"
@@ -75,11 +69,14 @@
                     android:layout_marginStart="15dp"
                     android:text="@string/explore"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_margin"
                     android:typeface="sans"
                     android:layout_marginTop="24dp"
-                    android:layout_below="@id/recommendedCourseListView"/>
-
+                    android:layout_below="@id/recommendedCourseListView"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:drawableEnd="@drawable/next"
+                    android:drawablePadding="@dimen/activity_horizontal_margin"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/exploreCourseListView"
                     android:layout_width="wrap_content"
@@ -89,8 +86,7 @@
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
                     android:layout_below="@id/textExploreCoursesList"
-                    android:layout_margin="5dp"
-                    android:background="@color/colorBlue"/>
+                    android:layout_margin="5dp"/>
             <!--<ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
