--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.login.LoginActivity"
-    android:background="@drawable/background_alter"
+    android:background="@drawable/background"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
 
@@ -24,8 +24,8 @@
         android:layout_marginTop="64dp"
         android:autofillHints="Email"
         android:hint="@string/prompt_email"
-        android:textColorHint="@color/colorWhite"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorGrey"
+        android:textColor="@color/colorWhite"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,8 +42,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_password"
-        android:textColorHint="@color/colorWhite"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorGrey"
+        android:textColor="@color/colorWhite"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
@@ -136,16 +136,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        android:indeterminateTint="@color/colorLiteGrey"/>
+        android:indeterminateTint="@color/colorYellow"/>
 
 
 
