--- a/app/src/main/res/layout/activity_setup_2.xml
+++ b/app/src/main/res/layout/activity_setup_2.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_alter"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:background="@drawable/background">
 
     <TextView
         android:layout_width="match_parent"
