--- a/app/src/main/res/layout/activity_setup_3.xml
+++ b/app/src/main/res/layout/activity_setup_3.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_alter"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:background="@drawable/background">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
