updated some designs

--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient_dark">
+    android:background="@drawable/background">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -18,13 +19,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:id="@+id/imgProfileImage" />
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="end"
             android:src="@drawable/add_circle_icon"
             android:background="@drawable/circle"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/add_an_optional_profile_photo"/>
     </FrameLayout>
 
     <view
@@ -50,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -61,14 +63,14 @@
             android:inputType="text"
             android:hint="@string/enter_your_name"
             android:textColorHint="@color/colorGrey"
-            android:drawableEnd="@drawable/edit_icon_light"
+            android:drawableEnd="@drawable/edit_icon"
+            android:drawableTint="@color/colorWhite"
             android:drawablePadding="5dp"
             android:id="@+id/profileName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tom Cruz"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
@@ -92,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/phone"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -103,14 +105,14 @@
             android:inputType="phone"
             android:hint="@string/phone"
             android:textColorHint="@color/colorGrey"
-            android:drawableEnd="@drawable/edit_icon_light"
+            android:drawableEnd="@drawable/edit_icon"
+            android:drawableTint="@color/colorWhite"
             android:drawablePadding="5dp"
             android:id="@+id/profilePhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="9998886661"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
@@ -134,7 +136,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/email_id"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -145,14 +147,14 @@
             android:inputType="textEmailAddress"
             android:hint="@string/prompt_email"
             android:textColorHint="@color/colorGrey"
-            android:drawableEnd="@drawable/edit_icon_light"
+            android:drawableEnd="@drawable/edit_icon"
+            android:drawableTint="@color/colorWhite"
             android:drawablePadding="5dp"
             android:id="@+id/profileEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="hunt@mission.com"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
