--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient_dark">
+    android:background="@drawable/background">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -50,9 +50,8 @@
             android:id="@+id/profileName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tom Cruz"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
@@ -76,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/phone"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -87,9 +86,8 @@
             android:id="@+id/profilePhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="9998886661"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
@@ -113,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/email_id"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -124,9 +122,8 @@
             android:id="@+id/profileEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="hunt@mission.com"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
@@ -150,7 +147,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/number_of_courses_taken"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -161,9 +158,8 @@
             android:id="@+id/profileNumCoursesTaken"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="15"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
@@ -187,7 +183,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/number_of_courses_taught"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/colorWhite"
             android:typeface="serif"
             android:layout_weight="60"
@@ -198,9 +194,8 @@
             android:id="@+id/profileNumCoursesTaught"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="3"
-            android:textSize="24sp"
-            android:textColor="#A2DD17"
+            android:textSize="18sp"
+            android:textColor="@color/colorYellow"
             android:typeface="sans"
             android:textStyle="bold"
             android:layout_weight="40"
