--- a/app/src/main/res/layout/activity_active_course_notifications.xml
+++ b/app/src/main/res/layout/activity_active_course_notifications.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient">
+    android:background="@drawable/background_light">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:padding="10dp"
-                android:background="@drawable/text_view_add_course"/>
+                android:background="@drawable/text_view_login"/>
             <!-- End DisplayOnClickingResourcesButton -->
 
         </RelativeLayout>
