--- a/app/src/main/res/layout/activity_active_course_resources.xml
+++ b/app/src/main/res/layout/activity_active_course_resources.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient">
+    android:background="@drawable/background_light">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -28,14 +28,15 @@
             <androidx.recyclerview.widget.RecyclerView
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/listResources"
                 android:orientation="vertical"
                 android:layout_below="@id/textCourseResources"
                 android:layout_marginTop="24dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:padding="10dp"
-                android:background="@drawable/text_view_add_course"/>
+                android:gravity="center_horizontal"
+                android:background="@drawable/text_view_login"/>
             <!-- End DisplayOnClickingResourcesButton -->
 
         </RelativeLayout>
