--- a/app/src/main/res/layout/activity_course_register.xml
+++ b/app/src/main/res/layout/activity_course_register.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-    android:background="@drawable/gradient">
+    android:background="@drawable/background_light">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
