--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity"
     android:id="@+id/drawer_layout"
     tools:openDrawer="left"
-    android:background="@drawable/gradient">
+    android:background="@drawable/background_texture">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,57 +20,60 @@
             android:scrollbars="vertical">
             <TextView
                 android:id="@+id/textYourCurrentCourses"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
                 android:layout_marginTop="24dp"
-                android:gravity="start"
+                android:gravity="center_vertical"
                 android:text="@string/resume_learning"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/text_margin"
-                android:typeface="sans" />
+                android:textStyle="bold"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="10dp"
+                android:typeface="monospace" />
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/currentCourseListView"
                     android:scrollbars="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginHorizontal="10dp"
                     android:orientation="horizontal"
                     android:layout_below="@id/textYourCurrentCourses"
                     android:layout_margin="5dp"/>
                 <TextView
                     android:id="@+id/textRecommendedCoursesList"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:layout_marginStart="15dp"
+                    android:gravity="center_vertical"
                     android:text="@string/recommended_for_you"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/text_margin"
-                    android:typeface="sans"
+                    android:textStyle="bold"
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="10dp"
+                    android:typeface="monospace"
                     android:layout_below="@id/currentCourseListView"
                     android:layout_marginTop="48dp"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recommendedCourseListView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:foregroundGravity="left"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginHorizontal="10dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
                     android:layout_below="@id/textRecommendedCoursesList"/>
                 <TextView
                     android:id="@+id/textExploreCoursesList"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:layout_marginStart="15dp"
+                    android:gravity="center_vertical"
                     android:text="@string/explore"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/text_margin"
-                    android:typeface="sans"
+                    android:textStyle="bold"
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="10dp"
+                    android:typeface="monospace"
                     android:layout_marginTop="24dp"
                     android:layout_below="@id/recommendedCourseListView"
                     android:clickable="true"
@@ -81,8 +84,7 @@
                     android:id="@+id/exploreCourseListView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginHorizontal="10dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
                     android:layout_below="@id/textExploreCoursesList"
@@ -99,7 +101,7 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
+        android:background="@drawable/background_light"
         android:fitsSystemWindows="true"
         android:layout_gravity="start"
         app:headerLayout="@layout/header_layout"
