--- a/app/src/main/res/layout/activity_active_course_review.xml
+++ b/app/src/main/res/layout/activity_active_course_review.xml
@@ -3,12 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light">
+    android:background="@drawable/background_texture">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <TextView
             android:id="@+id/textReviewTitleText"
             android:layout_width="match_parent"
@@ -23,7 +21,6 @@
             android:text="@string/username"
             android:typeface="sans"
             android:gravity="center_vertical"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +55,6 @@
                 android:layout_weight="50"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -73,5 +69,21 @@
             android:layout_gravity="center_vertical"
             android:layout_below="@id/layoutRateCourse"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/courseReview"
+            android:background="@drawable/btn_blue"
+            android:layout_marginVertical="20dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="20dp"
+            android:textColor="@color/colorBlack"
+            android:text="Submit Review"
+            android:typeface="sans"
+            android:textSize="@dimen/text_margin"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:elevation="20dp"
+            />
     </RelativeLayout>
 </ScrollView>
