--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,9 +26,9 @@
                 android:id="@+id/courseImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="Course Representative Image"
-                android:scaleType="centerCrop"
-                android:src="@color/colorPrimary" />
+                android:scaleType="fitCenter"
+                android:src="@color/colorPrimary"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/courseName"
