--- a/app/src/main/res/layout/activity_active_course_review.xml
+++ b/app/src/main/res/layout/activity_active_course_review.xml
@@ -84,6 +84,7 @@
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:elevation="20dp"
+            android:id="@+id/submitReview"
             />
     </RelativeLayout>
 </ScrollView>
