--- a/app/src/main/res/layout/activity_active_course_notifications.xml
+++ b/app/src/main/res/layout/activity_active_course_notifications.xml
@@ -1,45 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_light">
 
-    <ScrollView
+    <!-- Following Text View and Recycler Views should bn displayed upon click on Notifications button -->
+    <TextView
+        android:id="@+id/textNotifications"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:textColor="@color/colorBlack"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:text="@string/notifications"
+        android:typeface="sans"
+        android:gravity="center_vertical"/>
+    <!-- This view should be vertical -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listNotifications"
+        android:orientation="vertical"
+        android:layout_below="@id/textNotifications"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+        android:padding="10dp"
+        android:background="@drawable/text_view_login"/>
+    <!-- End DisplayOnClickingResourcesButton -->
 
-            <!-- Following Text View and Recycler Views should bn displayed upon click on Notifications button -->
-            <TextView
-                android:id="@+id/textNotifications"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:textColor="@color/colorBlack"
-                android:textStyle="bold"
-                android:textSize="24sp"
-                android:text="@string/notifications"
-                android:typeface="sans"
-                android:gravity="center_vertical"/>
-            <!-- This view should be vertical -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/listNotifications"
-                android:orientation="vertical"
-                android:layout_below="@id/textNotifications"
-                android:layout_marginTop="24dp"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                android:padding="10dp"
-                android:background="@drawable/text_view_login"/>
-            <!-- End DisplayOnClickingResourcesButton -->
-
-        </RelativeLayout>
-    </ScrollView>
 </RelativeLayout>
