--- a/app/src/main/res/layout/activity_active_course_review.xml
+++ b/app/src/main/res/layout/activity_active_course_review.xml
@@ -21,40 +21,19 @@
             android:text="@string/username"
             android:typeface="sans"
             android:gravity="center_vertical"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <RatingBar
             android:orientation="vertical"
-            android:id="@+id/layoutRateCourse"
             android:layout_below="@id/textReviewTitleText"
             android:layout_margin="@dimen/text_margin"
-            android:weightSum="100">
-            <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/courseRatings"
-                android:numStars="5"
-                android:rating="4"
-                android:stepSize="1"
-                android:isIndicator="true"
-                android:progressTint="@color/colorYellow"
-                android:progressBackgroundTint="@color/colorPrimaryDark"
-                android:layout_weight="50"
-                android:layout_gravity="center_vertical"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/enter_course_rating"
-                android:inputType="numberDecimal"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@drawable/text_view_login"
-                android:padding="10dp"
-                android:id="@+id/courseReviewRating"
-                android:importantForAutofill="no"
-                android:layout_weight="50"
-                android:layout_gravity="center_vertical"/>
-        </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/rateCourse"
+            android:numStars="5"
+            android:rating="3"
+            android:stepSize="0.5"
+            android:progressTint="@color/colorYellow"
+            android:progressBackgroundTint="@color/colorPrimaryDark"
+            android:layout_gravity="center_vertical"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,7 +46,7 @@
             android:id="@+id/courseReview"
             android:importantForAutofill="no"
             android:layout_gravity="center_vertical"
-            android:layout_below="@id/layoutRateCourse"
+            android:layout_below="@id/rateCourse"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>
         <Button
             android:layout_width="wrap_content"
