--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
@@ -12,7 +12,8 @@
     <androidx.cardview.widget.CardView
 
         android:id="@+id/courseIntroductoryCard"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
+        app:cardBackgroundColor="@color/colorPrimary"
         android:layout_height="160dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp">
