--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,13 +16,13 @@
         android:icon="@drawable/icon_resources"
         android:title="@string/resources"/>
     <item
+        android:id="@+id/bottomNavMenuForum"
+        android:enabled="true"
+        android:icon="@drawable/icon_forum"
+        android:title="@string/Forum"/>
+    <item
         android:id="@+id/bottomNavMenuReview"
         android:enabled="true"
         android:icon="@drawable/icon_review"
         android:title="@string/write_a_review"/>
-    <item
-        android:id="@+id/bottomNavMenuForum"
-        android:enabled="true"
-        android:icon="@drawable/icon_review"
-        android:title="@string/Forum"/>
 </menu>
